tests/snapshots/run_wpt_conformance__coreml_clamp_float16_4D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
clamp.https.any.js clamp float16 4D tensor default options, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'clampInput' must be of rank 5, instead got a multi-array value of rank 4.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    clampInput: f16[3, 2, 2, 2];
  }

  nodes {
    [clampOutput] = clamp(clampInput, label="", maxValue=null, minValue=null);
  }

  outputs { clampOutput; }
}
