tests/snapshots/run_wpt_conformance__coreml_clamp_float16_5D_tensor_specified_both_negative_options_minValue_and_options_maxValue.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
clamp.https.any.js clamp float16 5D tensor specified both negative options.minValue and options.maxValue, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'clampInput' must be of rank 4, instead got a multi-array value of rank 5.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    clampInput: f16[3, 2, 1, 1, 4];
  }

  nodes {
    [clampOutput] = clamp(clampInput, label="", maxValue=-1, minValue=-8);
  }

  outputs { clampOutput; }
}
