tests/snapshots/run_wpt_conformance__coreml_clamp_float32_3D_tensor_default_options_maxValue_and_specified_options_minValue_0_0.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
clamp.https.any.js clamp float32 3D tensor default options.maxValue and specified options.minValue=0.0, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'clampInput' must be of rank 4, instead got a multi-array value of rank 3.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    clampInput: f32[6, 2, 2];
  }

  nodes {
    [clampOutput] = clamp(clampInput, label="", maxValue=null, minValue=0);
  }

  outputs { clampOutput; }
}
