tests/snapshots/run_wpt_conformance__coreml_clamp_float32_5D_tensor_default_options_minValue_and_specified_negative_options_maxValue.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
clamp.https.any.js clamp float32 5D tensor default options.minValue and specified negative options.maxValue, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'clampInput' must be of rank 1, instead got a multi-array value of rank 5.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    clampInput: f32[2, 2, 1, 2, 3];
  }

  nodes {
    [clampOutput] = clamp(clampInput, label="", maxValue=-2, minValue=null);
  }

  outputs { clampOutput; }
}
