tests/snapshots/run_wpt_conformance__coreml_clamp_int64_1D_tensor_with_bigint_max.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
clamp.https.any.js clamp int64 1D tensor with bigint max, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type cast: Output '0' has incorrect type for operator 'ios17.cast'. Expected { tensor<fp32, [...]>, tensor<fp16, [...]>, tensor<uint16, [...]>, tensor<int8, [...]>, tensor<uint8, [...]>, tensor<int32, [...]>, tensor<int16, [...]>, tensor<bool, [...]> }; got tensor<int64, [8]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    clampInput: i64[8];
  }

  nodes {
    [clampOutput] = clamp(clampInput, label="", maxValue="9007199254740992", minValue=-2);
  }

  outputs { clampOutput; }
}
