tests/snapshots/run_wpt_conformance__coreml_clamp_uint32_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
clamp.https.any.js clamp uint32 1D tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type cast: Output '0' has incorrect type for operator 'ios17.cast'. Expected { tensor<fp32, [...]>, tensor<uint16, [...]>, tensor<int16, [...]>, tensor<fp16, [...]>, tensor<uint8, [...]>, tensor<int8, [...]>, tensor<int32, [...]>, tensor<bool, [...]> }; got tensor<uint32, [4]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    clampInput: u32[4];
  }

  nodes {
    [clampOutput] = clamp(clampInput, label="", maxValue=4294967290, minValue=5);
  }

  outputs { clampOutput; }
}
