tests/snapshots/run_wpt_conformance__coreml_concat_four_float16_4D_tensors_of_same_others_dimensions_except_different_4th_dimension_along_axis_3.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
concat.https.any.js concat four float16 4D tensors of same others dimensions except different 4th dimension along axis 3, coreml
 Failed to dispatch graph: coreml runtime failed: input dtype mismatch: model expects 4-byte elements (code 65568), but input is Float16 (2-byte); type conversion is not supported for this input

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    concatInput1: f16[1, 3, 1, 1];
    concatInput2: f16[1, 3, 1, 1];
    concatInput3: f16[1, 3, 1, 2];
    concatInput4: f16[1, 3, 1, 4];
  }

  nodes {
    [concatOutput] = concat(concatInput1, concatInput2, concatInput3, concatInput4, label="");
  }

  outputs { concatOutput; }
}
