tests/snapshots/run_wpt_conformance__coreml_concat_two_float16_2D_tensors_of_same_others_dimensions_except_different_1st_dimension_along_axis_0.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
concat.https.any.js concat two float16 2D tensors of same others dimensions except different 1st dimension along axis 0, coreml
 Failed to dispatch graph: coreml runtime failed: input dtype mismatch: model expects 4-byte elements (code 65568), but input is Float16 (2-byte); type conversion is not supported for this input

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    concatInput1: f16[1, 6];
    concatInput2: f16[3, 6];
  }

  nodes {
    [concatOutput] = concat(concatInput1, concatInput2, label="");
  }

  outputs { concatOutput; }
}
